# alpha_viam_rover

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  .ruff.toml  .yamllint  .yamllint.yaml  .yamllint.yml  AGENTS.md  AGENTS_PROGRESS.md  CONTRIBUTING.md  LICENSE  README.md  REPO_UPDATES.md  ROVER_TODO.md  SECURITY.md  alpha_viam_rover_roadmap_v1.0  pyproject.toml  pytest.ini  travel_progress_plan.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: agent_task.md
.github/scripts/: update_project_clock.py
.github/workflows/: lint-and-unit.yml  project-clock.yml  ros-ci.yml
ansible/: inventory.example  playbook.yml
bags/: .readme
bringup/: AGENTS.md
bringup/alpha_viam_bringup/: package.xml  setup.cfg  setup.py
bringup/alpha_viam_bringup/alpha_viam_bringup/: __init__.py
bringup/alpha_viam_bringup/alpha_viam_bringup/launch/: base_bringup.launch.py  cm_only.launch.py  drive_direct.launch.py  drive_forward.launch.py  drive_min.launch.py
bringup/alpha_viam_bringup/resource/: alpha_viam_bringup
can/: AGENTS.md
configs/: camera.yaml  controllers.yaml  diagnostics.yaml  diff_drive.params.yaml  diff_drive.yaml  diff_drive_params.yaml  ekf.yaml  imu.yaml  left_wheel_forward.yaml  left_wheel_params.yaml  network.yaml  power.yaml  right_wheel_forward.yaml  right_wheel_params.yaml  ros2_control.yaml  slam_toolbox.yaml  teleop_joy.yaml  topics.yaml  wheels_forward.yaml  ydlidar_g4.yaml
configs/dds/: example_profile.xml
configs/foxglove/: default_layout.json  viam_rover_bringup_legacy.json  viam_rover_rnd_dashboard_legacy.json
configs/nav2/: nav2_params.yaml
configs/schemas/: camera.schema.json  controllers.schema.json  diagnostics.schema.json  diff_drive.schema.json  ekf.schema.json  imu.schema.json  nav2.schema.json  network.schema.json  power.schema.json  ros2_control.schema.json  slam_toolbox.schema.json  topics.schema.json  ydlidar_g4.schema.json
configs/spawner/: diff_drive.yaml  forward.yaml  left_wheel.yaml  right_wheel.yaml
docs/: ISSUE_BACKLOG.md  handoff.md  remote_dev_quickstart.md  setup_pi.md  tf_tree.md
docs/ADR/: 0001-l298n-ros2-control.md  0002-controller-param-bridge-humble.md  0003-pigpio-mode-daemon.md  0004-architect-guidance.md  0004-controller-activation-humble.md  0005-humble-controller-activation-report.md  0006-controller-param-compat-humble.md  0009-imu-temperature-topic.md  README.md
docs/bringup/: gpio_i2c.md  os_ros.md  phase0.md  time_sync.md
docs/buses/: can.md
docs/compute/: jetson.md
docs/control/: drive_bringup_status_2025-09-10.md  drive_bringup_status_2025-09-11.md  drive_bringup_status_2025-09-17.md  phase3_drive_report.md  ros2_control_hw.md
docs/data/: mcap.md
docs/hw/: bus_checks.md  lights.md  pinmap.md
docs/mrdds/: networking.md
docs/nav/: README.md  frames.md
docs/networking/: awus036ach.md  wifi_policy.md
docs/sensors/: camera.md  imu_power.md  lidar.md
docs/tools/: foxglove.md  teleop.md
drivers/: AGENTS.md
drivers/l298n_hardware/: CMakeLists.txt  l298n_hardware_plugin.xml  package.xml
drivers/l298n_hardware/include/l298n_hardware/: l298n_system.hpp
drivers/l298n_hardware/src/: l298n_system.cpp
drivers/mpu6050_driver/: package.xml  setup.cfg  setup.py
drivers/mpu6050_driver/mpu6050_driver/: node.py
drivers/wifi_monitor/: package.xml  setup.cfg  setup.py
drivers/wifi_monitor/wifi_monitor/: node.py
hw/: README.md  pinmap.yaml
launch/: cm_only.launch.py  drive_only.launch.py  teleop_viz.launch.py  teleop_viz.launch.xml
lib/: __init__.py  driver_station_mapping.py  math_utils.py
nav/: AGENTS.md
perception/: AGENTS.md
scripts/: activate_controllers.py  activate_diff_drive.py  activate_forward.py  bootstrap_ros2_humble.sh  check_stack.sh  config_lint.py  diff_drive_smoke.sh  diff_drive_validate.sh  direct_smoke.sh  drive_smoke.sh  driver_station.sh  driver_station_server.py  driver_station_session.sh  forward_smoke.sh  gpio_pulse.py  l298n_direct.py  launch_smoke.py  launch_with_timeout.sh  motor_burst.sh  motor_test.sh  pigs_smoke.sh  prime_controller_params.py  pub_twist.py  record_mcap.sh  ros_clean.sh  seed_issues.py  setup_passwordless_sudo.sh  sync_issues_from_architect.py
urdf/: rover.urdf.xacro
(+19 files in other folders)
