<?xml version="1.0"?>
<package format="3">
  <name>alpha_viam_bringup</name>
  <version>0.0.1</version>
  <description>Bring-up launch files for the Alpha Viam Rover (URDF, EKF, Foxglove bridge).</description>
  <maintainer email="alpha@viam.local">alpha_viam</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <!-- Runtime nodes -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>

  <!-- Testing / linting can be added later -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

