<?xml version="1.0"?>
<package format="3">
  <name>mpu6050_driver</name>
  <version>0.1.0</version>
  <description>MPU-6050 IMU publisher for ROS 2 (sensor_msgs/Imu).</description>
  <maintainer email="alpha@viam.local">alpha_viam</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <!-- Ensure bringup installs first to avoid stale egg-link scan issues during parallel builds -->
  <build_depend>alpha_viam_bringup</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
