<?xml version="1.0"?>
<package format="3">
  <name>wifi_monitor</name>
  <version>0.1.0</version>
  <description>Wi‑Fi link health publisher (RSSI dBm and link_ok) for ROS 2.</description>
  <maintainer email="alpha@viam.local">alpha_viam</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <!-- Build order guard: ensure bringup installs first (avoids stale egg-link issues) -->
  <build_depend>alpha_viam_bringup</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
